RESOLVED FIXED193903
[GTK] gdk_cairo_draw_from_gl() in AcceleratedBackingStoreWayland fails in GtkInspector's magnifier
https://bugs.webkit.org/show_bug.cgi?id=193903
Summary [GTK] gdk_cairo_draw_from_gl() in AcceleratedBackingStoreWayland fails in Gtk...
Alice Mikhaylenko
Reported 2019-01-28 05:50:05 PST
Created attachment 360336 [details] WebkitWebView in magnifier AcceleratedBackingStoreWayland uses gdk_cairo_draw_from_gl() for drawing on GTK+ 3.16.0+. For some reason, in GtkInspector's magnifier or when drawing into a non-default Cairo surface, it doesn't draw anything and generates GL_INVALID_OPERATION (when I manually add glGetError() checks, by default it doesn't print anything. See attached screenshot Fedora 29, Intel GPU, Wayland, org.gnome.Platform//master in Flatpak.
Attachments
WebkitWebView in magnifier (70.42 KB, image/png)
2019-01-28 05:50 PST, Alice Mikhaylenko
no flags
Patch (16.67 KB, patch)
2019-01-30 06:02 PST, Carlos Garcia Campos
mcatanzaro: review+
Alice Mikhaylenko
Comment 1 2019-01-28 08:13:06 PST
Forgot to mention that it specifically only happens with the GTK 3.16.0+ codepath which is a single call to gdk_cairo_draw_from_gl(). If I comment out that part to let it use the custom pipeline, it works just fine.
Carlos Garcia Campos
Comment 2 2019-01-30 06:02:44 PST
EWS Watchlist
Comment 3 2019-01-30 06:05:08 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 4 2019-01-30 07:25:40 PST
Comment on attachment 360573 [details] Patch I bet Miguel would want to review it before landing.
Carlos Garcia Campos
Comment 5 2019-01-30 08:15:18 PST
Note You need to log in before you can comment on or make changes to this bug.